tests/fixtures/syntax/invalid/write_step_path_string_literal.repor
case "write path requires a workspace path literal, not a string literal" {
  write "out.txt" ```
    hello
    ```
  $ true
  assert {
    exit 0
  }
}
